did the usage section and the about section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,81 @@
     <!-- features section ends -->
 
 
+    <!-- about section starts -->
+    <section class="about" id="about">
+        <h1 class="heading">about the app</h1>
+
+        <div class="row">
+            <div class="image">
+                <img src="images/about-img.png" alt="">
+            </div>
+
+
+            <div class="content">
+                <h3>take a look around our app</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, adipisci corporis. Facere,
+                    consectetur.
+                    Eligendi cupiditate corrupti vero atque nam ipsam provident laborum dignissimos nesciunt eius saepe,
+                    sequi accusamus magni hic?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste ipsam accusantium eum. Eveniet,
+                    adipisci
+                    voluptatem. Exercitationem animi consequuntur molestiae minima.</p>
+                <div class="buttons">
+                    <a href="#"><img src="images/google-btn.png" alt=""></a>
+                    <a href="#"><img src="images/app-store-btn.png" alt=""></a>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- about section ends -->
+
+    <!-- usage section starts -->
+    <section class="usage" id="usage">
+        <h1 class="heading">how it works</h1>
+
+        <div class="row">
+            <div class="box-container">
+                <div class="box">
+                    <i class="fas fa-sort-amount-down"></i>
+                    <h3>minimum progress</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi excepturi, incidunt sunt nesciunt
+                        eius facere!</p>
+                </div>
+                <div class="box">
+                    <i class="fas fa-user-clock"></i>
+                    <h3>active time</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi excepturi, incidunt sunt nesciunt
+                        eius facere!
+                    </p>
+                </div>
+            </div>
+
+            <img src="images/usage-img.png" alt="" class="divider">
+
+            <div class="box-container">
+                <div class="box">
+                    <i class="fas fa-sort-amount-up"></i>
+                    <h3>maximum progress</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi excepturi, incidunt sunt nesciunt
+                        eius
+                        facere!</p>
+                </div>
+                <div class="box">
+                    <i class="fas fa-fire"></i>
+                    <h3>calories burned</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi excepturi, incidunt sunt nesciunt
+                        eius
+                        facere!
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- usage section ends -->
+
 
 
 
