worked on the review section

--- a/index.html
+++ b/index.html
@@ -193,6 +193,64 @@
     </section>
     <!-- usage section ends -->
 
+    <!-- review section starts -->
+
+    <section class="review" id="review">
+        <h1 class="heading">customers reivew</h1>
+
+        <div class="box-container">
+            <div class="box">
+                <img src="images/pic1.png" alt="">
+                <h3>john doe</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis reiciendis voluptates impedit
+                    id totam quaerat sint incidunt. Ea, voluptates aliquam.</p>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/pic2.png" alt="">
+                <h3>john doe</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis reiciendis voluptates impedit
+                    id totam
+                    quaerat sint incidunt. Ea, voluptates aliquam.</p>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/pic3.png" alt="">
+                <h3>john doe</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis reiciendis voluptates impedit
+                    id totam
+                    quaerat sint incidunt. Ea, voluptates aliquam.</p>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- review section ends -->
+
 
 
 
