finished the webpage

--- a/index.html
+++ b/index.html
@@ -251,6 +251,101 @@
 
     <!-- review section ends -->
 
+    <!-- pricing section start -->
+
+    <div class="pricing" id="pricing">
+        <h1 class="heading">our pricing plans</h1>
+        <div class="box-container">
+            <div class="box">
+                <div class="price"><span>$</span>10<span>/month</span></div>
+                <h3>basic</h3>
+                <ul>
+                    <li>00 MB disk space</li>
+                    <li>2 subdomains</li>
+                    <li>5 Email Accounts</li>
+                    <li>email support</li>
+
+                </ul>
+                <a href="#" class="btn">select plan </a>
+            </div>
+            <div class="box">
+                <div class="price"><span>$</span>20<span>/month</span></div>
+                <h3>standard</h3>
+                <ul>
+                    <li>00 MB disk space</li>
+                    <li>2 subdomains</li>
+                    <li>5 Email Accounts</li>
+                    <li>email support</li>
+
+                </ul>
+                <a href="#" class="btn">select plan </a>
+            </div>
+            <div class="box">
+                <div class="price"><span>$</span>30<span>/month</span></div>
+                <h3>premium</h3>
+                <ul>
+                    <li>00 MB disk space</li>
+                    <li>2 subdomains</li>
+                    <li>5 Email Accounts</li>
+                    <li>email support</li>
+
+                </ul>
+                <a href="#" class="btn">select plan </a>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- pricing section end -->
+
+
+    <!-- contact section start -->
+
+    <section class="contact" id="contact">
+        <h1 class="heading">contact us</h1>
+
+        <form action="">
+            <div class="inputBox">
+                <input type="text" required>
+                <label for="">name</label>
+            </div>
+            <div class="inputBox">
+                <input type="email" required>
+                <label for="">email</label>
+            </div>
+            <div class="inputBox">
+                <input type="number" required>
+                <label for="">number</label>
+            </div>
+            <div class="inputBox">
+                <textarea required name="" id="" cols="30" rows="10"></textarea>
+                <label for="">message</label>
+            </div>
+
+            <input type="submit" class="btn" value="send message">
+        </form>
+    </section>
+
+    <!-- contact section end -->
+
+    <!-- footer section start -->
+
+    <section class="footer">
+        <div class="share">
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-linkedin"></a>
+
+        </div>
+
+        <h1 class="credit">created by <span>Sifiso Patel</span> | all rights reserved</h1>
+    </section>
+
+    <!-- footer section end -->
+
+
+
 
 
 
